--- a/myTodoList/templates/list/list.html
+++ b/myTodoList/templates/list/list.html
@@ -3,23 +3,29 @@ block body %}
 
 <section class="backdrop-blur-xl bg-white/60 rounded-xl">
   <div class="flex flex-col justify-center items-center mt-10 pt-6 px-8">
-    <h3 class="text-4xl font-bold">TODAY'S TO DO</h3>
+    <h3 class="text-4xl font-bold tracking-widest">TODAY'S TO DO</h3>
 
     <div class="m-8 text-2xl">
       <!-- Calendar -->
       <form action="{{ url_for('list.index') }}" method="post">
-        <input
-          name="day"
-          type="date"
-          required
-          class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700 text-lg"
-        />
-        <button
-          type="submit"
-          class="text-sm bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
-        >
-          SET
-        </button>
+        <div class="flex flex-row justify-start">
+          <div class="flex flex-col justify-start">
+            <label for="calendar" class="text-xs tracking-widest">DAY</label>
+            <input
+              name="day"
+              id="calendar"
+              type="date"
+              required
+              class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700 text-lg"
+            />
+          </div>
+          <button
+            type="submit"
+            class="text-xs bg-blue-800 hover:bg-blue-600 text-white rounded mt-3 ml-1 py-2 px-4"
+          >
+            SET
+          </button>
+        </div>
       </form>
     </div>
   </div>
@@ -31,12 +37,12 @@ block body %}
       <p
         class="basis-auto rounded py-1 px-3 mr-1 mb-3 border border-blue-900 bg-white text-center"
       >
-        {{ task['priority'] }}
+        {{ task['priority'] and task['priority'] or '-'}}
       </p>
       <p
         class="basis-1/4 rounded py-1 px-2 mr-1 mb-3 border border-blue-900 bg-white"
       >
-        {{ task['duedate'] }}
+        {{ task['duedate'] and task['duedate'] or 'None' }}
       </p>
       <p
         class="basis-1/2 rounded py-1 px-2 mr-1 mb-3 border border-blue-900 bg-white"
@@ -73,7 +79,7 @@ block body %}
           <input
             type="submit"
             name="completed"
-            value="{{ task['completed'] == 0 and 'Incompleted' or 'Completed'}}"
+            value="{{ task['completed'] == 0 and 'Incompleted' or 'Completed!!'}}"
             class="bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
           />
         </form>
@@ -90,7 +96,7 @@ block body %}
         type="button"
         class="bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
       >
-        Plan
+        Plan More
       </button></a
     >
     <!-- Go back to plan page ends -->
@@ -99,7 +105,7 @@ block body %}
     <form action="{{ url_for('list.done') }}" method="post">
       <input
         type="submit"
-        value="Done"
+        value="Let's Call It A Day"
         class="bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
       />
     </form>
