--- a/myTodoList/templates/list/list.html
+++ b/myTodoList/templates/list/list.html
@@ -1,27 +1,35 @@
 {% extends "layout.html" %} {% block title %} Today's Todo {% endblock %} {%
 block body %}
 
-<section class="backdrop-blur-xl bg-white/60 rounded-xl">
-  <div class="flex flex-col justify-center items-center mt-10 pt-6 px-8">
-    <h3 class="text-4xl font-bold tracking-widest">TODAY'S TO DO</h3>
+<section class="backdrop-blur-xl bg-white/40 rounded-xl mx-4">
+  <div class="flex flex-col justify-center items-center mt-10 pt-6 px-1">
+    <h3
+      class="font-bold tracking-widest text-gray-900 text-3xl md:text-4xl 2xl:my-6"
+    >
+      TODAY'S TO DO
+    </h3>
 
-    <div class="m-8 text-2xl">
+    <div class="text-2xl m-8">
       <!-- Calendar -->
       <form action="{{ url_for('list.index') }}" method="post">
-        <div class="flex flex-row justify-start">
+        <div class="flex flex-col md:flex-row md:justify-start">
           <div class="flex flex-col justify-start">
-            <label for="calendar" class="text-xs tracking-widest">DAY</label>
+            <label
+              for="calendar"
+              class="tracking-widest text-xs lg:text-base xl:text-lg 2xl:text-2xl mb-1"
+              >DAY</label
+            >
             <input
               name="day"
               id="calendar"
               type="date"
               required
-              class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700 text-lg"
+              class="rounded outline-1 outline-offset-2 outline-blue-700 py-1 px-2"
             />
           </div>
           <button
             type="submit"
-            class="text-xs bg-blue-800 hover:bg-blue-600 text-white rounded mt-3 ml-1 py-2 px-4"
+            class="bg-blue-800 hover:bg-blue-600 text-white tracking-widest rounded text-base xl:text-xl 2xl:text-2xl mt-4 md:ml-3 md:mt-5 lg:mt-6 xl:mt-7 2xl:mt-8 py-1 px-4"
           >
             SET
           </button>
@@ -30,22 +38,108 @@ block body %}
     </div>
   </div>
 
+  <!-- Show alert -->
+  {% for message in get_flashed_messages() %}
+  <div
+    class="text-rose-700 text-center font-bold tracking-widest text-lg md:text-2xl mb-6 md:mb-0 py-4"
+  >
+    {{ message }}
+  </div>
+  {% endfor %}
+
   <!-- Todo list starts -->
-  <div class="px-8">
+  <!-- Media Query sm -->
+  <div class="flex flex-col justify-center md:hidden px-2">
+    {% for task in tasks %}
+    <div class="flex flex-row justify-start items-center mb-3">
+      <div class="basis-2/3 flex-col">
+        <div class="flex flex-row">
+          <p
+            class="basis-1/4 rounded border border-blue-900 bg-white text-center mr-1 mb-3 py-1 px-3"
+          >
+            {{ task['priority'] and task['priority'] or '-'}}
+          </p>
+          <p
+            class="basis-3/4 rounded border border-blue-900 bg-white mr-1 mb-3 py-1 px-2"
+          >
+            {{ task['duedate'] and task['duedate'] or 'None' }}
+          </p>
+        </div>
+        <div>
+          <p
+            class="rounded border border-blue-900 bg-white mr-1 mb-3 py-1 px-2"
+          >
+            {{ task['task'] }}
+          </p>
+        </div>
+      </div>
+
+      <div
+        class="basis-1/3 flex flex-row justify-evenly items-center ml-auto mb-3"
+      >
+        <div>
+          <!-- Edit button -->
+          <a href="{{ url_for('todo.edit', id=task['id']) }}"
+            ><button
+              type="button"
+              class="bg-blue-800 hover:bg-blue-600 text-white rounded mr-1 mb-3 py-1 px-4"
+            >
+              <i class="fas fa-pen fa-sm"></i></button
+          ></a>
+          <!-- Delete button -->
+          <form
+            action="{{ url_for('todo.delete', id=task['id']) }}"
+            method="post"
+          >
+            <button
+              type="submit"
+              class="bg-blue-800 hover:bg-blue-600 text-white rounded py-1 px-4"
+            >
+              <i class="fas fa-trash fa-sm"></i>
+            </button>
+          </form>
+        </div>
+        <div>
+          <!-- Completed button -->
+          <form
+            action="{{ url_for('list.completed', id=task['id']) }}"
+            method="post"
+          >
+            <button
+              type="submit"
+              name="completed"
+              class="bg-blue-800 hover:bg-blue-600 text-white rounded w-10 h-20 py-1 px-1"
+            >
+              {% if task['completed'] == 0 %}
+              <i class="fas fa-check fa-sm"></i>
+              {% else %}
+              <span></span>
+              {% endif %}
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+  <!-- Media Quert sm ends -->
+
+  <!-- Media Quert md+ -->
+  <div class="px-8 hidden md:block">
     {% for task in tasks %}
     <div class="flex flex-row justify-start items-center">
       <p
-        class="basis-auto rounded py-1 px-3 mr-1 mb-3 border border-blue-900 bg-white text-center"
+        class="basis-auto rounded border border-blue-900 bg-white text-center mr-1 mb-3 py-1 px-3"
       >
         {{ task['priority'] and task['priority'] or '-'}}
       </p>
       <p
-        class="basis-1/4 rounded py-1 px-2 mr-1 mb-3 border border-blue-900 bg-white"
+        class="basis-1/4 rounded border border-blue-900 bg-white md:text-sm lg:text-lg xl:text-xl 2xl:text-3xl mr-1 mb-3 py-1 px-2 md:py-1.5 xl:py-2 2xl:py-2"
       >
         {{ task['duedate'] and task['duedate'] or 'None' }}
       </p>
       <p
-        class="basis-1/2 rounded py-1 px-2 mr-1 mb-3 border border-blue-900 bg-white"
+        class="basis-1/2 rounded border border-blue-900 bg-white mr-1 mb-3 py-1 px-2"
       >
         {{ task['task'] }}
       </p>
@@ -55,9 +149,9 @@ block body %}
         <a href="{{ url_for('todo.edit', id=task['id']) }}"
           ><button
             type="button"
-            class="ml-auto mr-1 bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
+            class="bg-blue-800 hover:bg-blue-600 text-white rounded ml-auto mr-1 py-2 px-4"
           >
-            edit
+            EDIT
           </button></a
         >
         <!-- Delete button -->
@@ -67,8 +161,8 @@ block body %}
         >
           <input
             type="submit"
-            value="Delete"
-            class="mr-1 bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
+            value="DELETE"
+            class="bg-blue-800 hover:bg-blue-600 text-white rounded mr-1 py-2 px-4"
           />
         </form>
         <!-- Completed button -->
@@ -79,7 +173,7 @@ block body %}
           <input
             type="submit"
             name="completed"
-            value="{{ task['completed'] == 0 and 'Incompleted' or 'Completed!!'}}"
+            value="{{ task['completed'] == 0 and 'INCOMPLETED' or 'COMPLETED!!'}}"
             class="bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
           />
         </form>
@@ -87,28 +181,34 @@ block body %}
     </div>
     {% endfor %}
   </div>
+  <!-- Media Quert md+ ends -->
   <!-- Todo list ends -->
 
-  <div class="flex flex-row justify-around items-center mt-8 pb-6 px-8">
-    <!-- Go back to plan page starts -->
-    <a href="{{ url_for('todo.index') }}"
-      ><button
-        type="button"
-        class="bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
+  <div
+    class="flex flex-col md:flex-row justify-around items-center mt-8 pb-6 px-8 2xl:pb-16"
+  >
+    <div class="order-2 md:order-1">
+      <!-- Go back to plan page starts -->
+      <a href="{{ url_for('todo.index') }}"
+        ><button
+          type="button"
+          class="bg-blue-800 hover:bg-blue-600 text-white tracking-widest rounded py-2 px-4"
+        >
+          PLAN MORE
+        </button></a
       >
-        Plan More
-      </button></a
-    >
-    <!-- Go back to plan page ends -->
-
-    <!-- Today's task done starts -->
-    <form action="{{ url_for('list.done') }}" method="post">
-      <input
-        type="submit"
-        value="Let's Call It A Day"
-        class="bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
-      />
-    </form>
+      <!-- Go back to plan page ends -->
+    </div>
+    <div class="order-1 md:order-2">
+      <!-- Today's task done starts -->
+      <form action="{{ url_for('list.done') }}" method="post">
+        <input
+          type="submit"
+          value="LET'S CALL IT A DAY"
+          class="bg-blue-800 hover:bg-blue-600 text-white rounded mb-6 md:mb-0 py-2 px-4"
+        />
+      </form>
+    </div>
     <!-- Today's task done ends -->
   </div>
 </section>
