--- a/myTodoList/templates/todo/edit.html
+++ b/myTodoList/templates/todo/edit.html
@@ -2,15 +2,15 @@
 %}
 <section>
   <div
-    class="flex flex-col justify-center text-center mt-60 mx-auto backdrop-blur-xl bg-white/60 rounded-xl py-6 px-10"
+    class="flex flex-col justify-center text-center backdrop-blur-xl bg-white/40 rounded-xl lg:max-w-4xl xl:max-w-5xl 2xl:max-w-7xl mx-4 lg:mx-auto mt-20 md:mt-40 2xl:mt-72 py-6 px-2 md:pb-8 md:px-10 lg:pb-10"
   >
-    <h4 class="text-4xl font-bold pb-6 tracking-widest">EDIT</h4>
+    <h4 class="text-4xl font-bold tracking-widest text-gray-900 pb-6">EDIT</h4>
     <!-- Edit task form starts -->
     <form method="post">
-      <div class="basis-1 flex flex-row justify-around">
+      <div class="basis-1 flex flex-col md:flex-row justify-around">
         <!-- Edit task -->
-        <div class="flex flex-col justify-start mr-1">
-          <label for="newTask" class="text-xs tracking-widest text-start"
+        <div class="flex flex-col justify-start mb-3 md:mb-0 md:mr-1 2xl:mr-2">
+          <label for="newTask" class="text-xs tracking-widest text-start lg:text-base xl:text-lg 2xl:text-2xl mb-1"
             >NEW TASK</label
           >
           <input
@@ -19,13 +19,13 @@
             type="text"
             value="{{ request.form['newTask'] or task['task'] }}"
             required
-            class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700"
+            class="rounded outline-1 outline-offset-2 outline-blue-700 py-1 px-2"
           />
         </div>
 
         <!-- Due date -->
-        <div class="flex flex-col justify-start mr-1">
-          <lable for="duedate" class="text-xs tracking-widest text-start"
+        <div class="flex flex-col justify-start mb-3 md:mb-0 md:mr-1 2xl:mr-2">
+          <lable for="duedate" class="text-xs tracking-widest text-start lg:text-base xl:text-lg 2xl:text-2xl mb-1"
             >DUE DATE</lable
           >
           <input
@@ -33,12 +33,12 @@
             id="duedate"
             type="datetime-local"
             value="{{ request.form['duedate'] }}"
-            class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700"
+            class="rounded outline-1 outline-offset-2 outline-blue-700 py-1 px-2"
           />
         </div>
         <!-- Priority -->
-        <div class="flex flex-col justify-start mr-1">
-          <label for="priority" class="text-xs tracking-widest text-start"
+        <div class="flex flex-col justify-start mb-3 md:mr-1 2xl:mr-2 mb-2 md:mb-0">
+          <label for="priority" class="tracking-widest text-start text-xs lg:text-base xl:text-lg 2xl:text-2xl mb-1"
             >PRIORITY</label
           >
           <input
@@ -46,23 +46,23 @@
             id="priority"
             type="text"
             value="{{ request.form['priority'] or task['priority'] }}"
-            class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700"
+            class="rounded outline-1 outline-offset-2 outline-blue-700 py-1 px-2"
           />
         </div>
      
       <!-- Single task set button -->
       <button
         type="submit"
-        class="text-xs bg-blue-800 hover:bg-blue-600 text-white rounded  mt-3 py-2 px-4"
-      >
-        Edit
+        class="bg-blue-800 hover:bg-blue-600 text-white rounded tracking-widest text-base xl:text-xl 2xl:text-2xl mt-4 lg:mt-5 xl:mt-6 py-2 2xl:py-3 px-4 2xl:px-5">
+        EDIT
       </button>
     </form>
   </div>
     <!-- Edit task form ends -->
+    
     <!-- Show alert -->
     {% for message in get_flashed_messages() %}
-    <div class="text-rose-700 text-center py-4">{{ message }}</div>
+    <div class="text-rose-700 text-center font-bold tracking-widest text-lg md:text-2xl py-4">{{ message }}</div>
     {% endfor %}
   </div>
 </section>
