--- a/myTodoList/templates/todo/index.html
+++ b/myTodoList/templates/todo/index.html
@@ -1,16 +1,13 @@
 {% extends "layout.html" %} {% block title %} Plan {% endblock %} {% block body
 %}
 
-<!-- 
-fontawesome_html
-<span class="fas fa-link"></span> 
--->
-
 <section class="backdrop-blur-xl bg-white/40 rounded-xl mx-4">
   <div
-    class="flex flex-col justify-center items-center mt-10 pt-6 px-1 mb-6 md:mb-0"
+    class="flex flex-col justify-center items-center mt-10 mb-6 md:mb-0 pt-6 px-1"
   >
-    <h3 class="text-4xl font-bold tracking-widest">PLAN TODO</h3>
+    <h3 class="text-4xl font-bold tracking-widest text-gray-900 2xl:my-6">
+      PLAN TODO
+    </h3>
 
     <!-- Add task form starts -->
     <form
@@ -20,57 +17,73 @@ fontawesome_html
       <div class="basis-1 mb-6">
         <!-- Calendar -->
         <div class="flex flex-col justify-start">
-          <label for="calendar" class="text-xs tracking-widest">DAY</label>
+          <label
+            for="calendar"
+            class="text-xs lg:text-base xl:text-lg 2xl:text-2xl tracking-widest mb-1"
+            >DAY</label
+          >
           <input
             name="day"
             id="calendar"
             type="date"
             value="{{ request.form['day'] }}"
-            class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700"
+            class="rounded outline-1 outline-offset-2 outline-blue-700 py-1 px-2"
           />
         </div>
       </div>
 
       <div class="basis-1 flex flex-col md:flex-row justify-around">
         <!-- Add task -->
-        <div class="flex flex-col justify-start mr-1 mb-2 md:mb-0">
-          <label for="newTask" class="text-xs tracking-widest">NEW TASK</label>
+        <div class="flex flex-col justify-start mr-1 2xl:mr-2 mb-2 md:mb-0">
+          <label
+            for="newTask"
+            class="text-xs lg:text-base xl:text-lg 2xl:text-2xl tracking-widest mb-1"
+            >NEW TASK</label
+          >
           <input
             name="newTask"
             id="newTask"
             type="text"
             placeholder="Add Task"
             value="{{ request.form['newTask'] }}"
-            class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700"
+            class="rounded outline-1 outline-offset-2 outline-blue-700 py-1 px-2"
           />
         </div>
         <!-- Due Date -->
-        <div class="flex flex-col justify-start mr-1 mb-2 md:mb-0">
-          <lable for="duedate" class="text-xs tracking-widest">DUE DATE</lable>
+        <div class="flex flex-col justify-start mr-1 2xl:mr-2 mb-2 md:mb-0">
+          <lable
+            for="duedate"
+            class="text-xs lg:text-base xl:text-lg 2xl:text-2xl tracking-widest mb-1"
+            >DUE DATE</lable
+          >
           <input
             name="duedate"
             id="duedate"
             type="datetime-local"
             value="{{ request.form['duedate'] }}"
-            class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700"
+            class="rounded outline-1 outline-offset-2 outline-blue-700 py-1 px-2"
           />
         </div>
         <!-- Priority -->
-        <div class="flex flex-col justify-start mr-1">
-          <label for="priority" class="text-xs tracking-widest">PRIORITY</label>
+        <div class="flex flex-col justify-start mr-1 2xl:mr-2">
+          <label
+            for="priority"
+            class="text-xs lg:text-base xl:text-lg 2xl:text-2xl tracking-widest mb-1"
+            >PRIORITY</label
+          >
           <input
             name="priority"
             id="priority"
             type="text"
             placeholder="Priority"
             value="{{ request.form['priority'] }}"
-            class="rounded py-1 px-2 outline-1 outline-offset-2 outline-blue-700"
+            class="rounded outline-1 outline-offset-2 outline-blue-700 py-1 px-2"
           />
         </div>
         <!-- Single task set button -->
         <button
           type="submit"
-          class="text-xs bg-blue-800 hover:bg-blue-600 text-white rounded mt-3 py-2 px-4"
+          class="text-sm md:text-base xl:text-xl 2xl:text-2xl bg-blue-800 hover:bg-blue-600 text-white tracking-widest rounded mt-4 lg:mt-6 xl:mt-7 2xl:mt-8 py-1 px-4"
         >
           ADD
         </button>
@@ -81,31 +94,35 @@ fontawesome_html
 
   <!-- Show alert -->
   {% for message in get_flashed_messages() %}
-  <div class="text-rose-700 text-center py-4">{{ message }}</div>
+  <div
+    class="text-rose-700 text-center font-bold tracking-widest text-lg md:text-2xl py-4"
+  >
+    {{ message }}
+  </div>
   {% endfor %}
 
   <!-- Todo list starts -->
 
-  <!-- Media Quert sm -->
-  <div class="pl-5 flex flex-col justify-center md:hidden">
+  <!-- Media Query sm -->
+  <div class="flex flex-col justify-center md:hidden pl-5">
     {% for task in tasks %}
     <div class="flex flex-row justify-start items-center mb-3">
       <div class="basis-3/4">
         <div>
           <p
-            class="rounded py-1 px-2 mr-1 mb-3 border border-blue-900 bg-white"
+            class="rounded border border-blue-900 bg-white mr-1 mb-3 py-1 px-2"
           >
             {{ task['task'] }}
           </p>
         </div>
         <div class="flex flex-row">
           <p
-            class="basis-3/4 rounded py-1 px-2 mr-1 mb-3 border border-blue-900 bg-white"
+            class="basis-3/4 rounded border border-blue-900 bg-white mr-1 mb-3 py-1 px-2"
           >
             {{ task['duedate'] }}
           </p>
           <p
-            class="basis-1/4 rounded py-1 px-3 mr-1 mb-3 border border-blue-900 bg-white text-center"
+            class="basis-1/4 rounded border border-blue-900 bg-white text-center mr-1 mb-3 py-1 px-3"
           >
             {{ task['priority'] and task['priority'] or 'None' }}
           </p>
@@ -118,7 +135,7 @@ fontawesome_html
           <a href="{{ url_for('todo.edit', id=task['id']) }}"
             ><button
               type="button"
-              class="ml-auto mr-1 bg-blue-800 hover:bg-blue-600 text-white rounded py-1 px-4"
+              class="bg-blue-800 hover:bg-blue-600 text-white rounded ml-auto mr-1 py-1 px-4"
             >
               <i class="fas fa-pen fa-sm"></i></button
           ></a>
@@ -142,24 +159,24 @@ fontawesome_html
 
     {% endfor %}
   </div>
-  <!-- Media Quert sm -->
+  <!-- Media Quert sm ends -->
 
   <!-- Media Quert md+ -->
-  <div class="px-8 flex flex-col justify-center hidden md:block">
+  <div class="flex flex-col justify-center hidden md:block px-8">
     {% for task in tasks %}
     <div class="flex flex-row justify-start items-center">
       <p
-        class="basis-1/2 rounded py-1 px-2 mr-1 mb-3 border border-blue-900 bg-white"
+        class="basis-1/2 rounded border border-blue-900 bg-white mr-1 mb-3 py-1 px-2"
       >
         {{ task['task'] }}
       </p>
       <p
-        class="basis-1/4 rounded py-1 px-2 mr-1 mb-3 border border-blue-900 bg-white"
+        class="basis-1/4 rounded border border-blue-900 bg-white mr-1 mb-3 py-1 px-2"
       >
         {{ task['duedate'] }}
       </p>
       <p
-        class="basis-1/6 rounded py-1 px-3 mr-1 mb-3 border border-blue-900 bg-white text-center"
+        class="basis-1/6 rounded border border-blue-900 bg-white text-center mr-1 mb-3 py-1 px-3"
       >
         {{ task['priority'] and task['priority'] or 'None' }}
       </p>
@@ -169,9 +186,9 @@ fontawesome_html
         <a href="{{ url_for('todo.edit', id=task['id']) }}"
           ><button
             type="button"
-            class="ml-auto mr-1 bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
+            class="bg-blue-800 hover:bg-blue-600 text-white rounded ml-auto mr-1 py-2 px-4"
           >
-            Edit
+            EDIT
           </button></a
         >
         <!-- Delete button -->
@@ -181,7 +198,7 @@ fontawesome_html
         >
           <input
             type="submit"
-            value="Delete"
+            value="DELETE"
             class="bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
           />
         </form>
@@ -190,22 +207,21 @@ fontawesome_html
 
     {% endfor %}
   </div>
-  <!-- Media Quert md -->
+  <!-- Media Quert md ends -->
+  <!-- Todo list ends -->
 
-  <div class="flex justify-center items-center pb-6 px-8">
+  <div class="flex justify-center items-center 2xl:my-6 pb-6 px-8">
     <!-- All tasks set button starts -->
     <a href="{{ url_for('list.index') }}"
       ><button
         type="button"
-        class="self-center bg-blue-800 hover:bg-blue-600 text-white rounded py-2 px-4"
+        class="self-center bg-blue-800 hover:bg-blue-600 text-white tracking-widest rounded py-2 px-4 2xl:py-3 2xl:px-5"
       >
         SAVE
       </button></a
     >
   </div>
   <!-- All tasks set button ends -->
-
-  <!-- Todo list ends -->
 </section>
 
 {% endblock %}
